Test: fix initial layout bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 main {
-  height: 100svh;
+  height: 100vh;
   position: relative;
 }
 
@@ -81,13 +81,13 @@ section {
   height: auto;
   display: block;
   margin: 0 auto;
-  max-width: 45svh;
+  max-width: 45vh;
   width: 100%;
 
   @media (orientation: landscape) {
     height: auto;
     max-width: 50%;
-    width: 50svh;
+    width: 50vh;
   }
 }
 
